# mxfold2

./: README.md  build.py  pyproject.toml
mxfold2/: __main__.py  dataset.py  predict.py  train.py
mxfold2/fold/: shape_layers.py
mxfold2/loss/: shape_fy_loss.py  shape_nll_loss.py
mxfold2/models/: all_cdhit.conf
mxfold2/src/: CMakeLists.txt
mxfold2/src/fold/: linfold.cpp
