[project]
name = "mxfold2"
version = "0.2.0"
description = "RNA secondary structure prediction using deep neural networks with thermodynamic integration"
authors = [
    { name="Kengo Sato", email="satoken@bio.titech.ac.jp" }
]
repository = "https://github.com/mxfold/mxfold2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.2",
    "pybind11>=2.13.6",
    "pytorch-optimizer>=3.1.2",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
]

[project.scripts]
mxfold2 = "mxfold2.__main__:main"

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "tensorboard>=2.18.0",
    "torch-tb-profiler>=0.4.3",
]

[tool.scikit-build]
cmake.source-dir = "./mxfold2/src"
sdist.include = ["mxfold2/models/*"]
sdist.exclude = [".devcontainer", ".gitignore", ".gitmodules", ".pylintrc"]
wheel.exclude = ["mxfold2/src"]